--- a/scss/global/header.scss
+++ b/scss/global/header.scss
@@ -1,18 +1,37 @@
 .Header {
     border-bottom: 1px solid #ddd;
-    background-color: rosybrown;
     .container {
+        position: relative;
         display: flex;
         align-items: center;
         height: 64px;
     }
+    &-switch {
+        margin-left: auto;
+        @include mq() {
+            display: none;
+        }
+    }
 
     &-menu {
-        margin-left: auto;
+        //display: none;
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 100%;
+        background-color: #ccc;
         display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        @include mq() {
+            display: flex;
+            margin-left: auto;
+        }
         &-user {
             margin-right: 10px;
             display: flex;
+            flex-direction: column;
             a {
                 display: inline-flex; //içindeki yazıları ortalamak için
                 align-items: center;
@@ -24,9 +43,7 @@
                 }
             }
         }
-        &-switch {
-           color: rebeccapurple;
-        }
+
         &-helper {
             display: flex;
             margin-left: 20px;
