--- a/scss/helper/global.scss
+++ b/scss/helper/global.scss
@@ -2,7 +2,7 @@
     max-width: $max-width;
     margin-left: auto; // margin : 0 auto verseydik performans açısından daha kötü 4 tane görev vermiş oluyoruz...
     margin-right: auto;
-    background-color: #fff;
+    padding-left: $gutter;
 }
 
 a {
