--- a/css/main.css
+++ b/css/main.css
@@ -345,17 +345,18 @@ table {
 td {
   padding: 0; }
 
+body {
+  font-family: "Open Sans", sans-serif; }
+
 .container {
-  max-width: 1200px;
+  max-width: 1140px;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 20px; }
+  padding-left: 20px;
+  padding-right: 20px; }
 
 a {
   color: #083b87; }
-
-body {
-  font-family: "Open Sans", sans-serif; }
 
 .button {
   display: inline-flex;
@@ -365,57 +366,105 @@ body {
   height: 40px;
   color: #fff;
   font-weight: bold;
-  background-color: #01acee;
+  background-color: transparent;
   border-radius: 3px; }
+  .button-icon {
+    color: black;
+    padding-left: 0;
+    padding-right: 0;
+    width: 40px; }
+  .button-blue {
+    background-color: #01acee; }
 
 .icon {
+  align-items: center;
   display: inline-block;
-  width: 20px;
-  height: 20px;
+  width: 32px;
+  height: 32px;
   stroke-width: 0;
   stroke: currentColor;
   fill: currentColor; }
 
 .Header {
+  height: 68px;
   border-bottom: 1px solid #ddd; }
   .Header .container {
+    height: 100%;
     position: relative;
     display: flex;
-    align-items: center;
-    height: 64px; }
+    align-items: center; }
   .Header-switch {
+    position: relative;
+    left: 10px;
     margin-left: auto; }
     @media (min-width: 768px) {
       .Header-switch {
         display: none; } }
   .Header-menu {
+    pointer-events: none;
+    opacity: 0;
+    transform: translateX(100%);
+    transition: 0.2s;
+    display: flex;
     position: absolute;
     left: 0;
     right: 0;
     top: 100%;
-    background-color: #ccc;
-    display: flex;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
     flex-direction: column;
-    align-items: center; }
+    background-color: #fff;
+    box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2); }
+    .Header.menu-show .Header-menu {
+      pointer-events: auto;
+      opacity: 1;
+      transform: translateY(0); }
     @media (min-width: 768px) {
       .Header-menu {
-        display: flex;
-        margin-left: auto; } }
+        opacity: 1;
+        transform: translateY(0);
+        transition: 0s;
+        margin-left: auto;
+        flex-direction: row;
+        position: static;
+        box-shadow: none;
+        background-color: transparent;
+        padding-left: 0;
+        padding-right: 0;
+        padding-bottom: 0; } }
     .Header-menu-user {
       margin-right: 10px;
       display: flex;
-      flex-direction: column; }
+      flex-direction: column;
+      align-items: center; }
+      @media (min-width: 768px) {
+        .Header-menu-user {
+          flex-direction: row; } }
       .Header-menu-user a {
+        width: 100%;
         display: inline-flex;
         align-items: center;
+        justify-content: center;
         padding-left: 20px;
         padding-right: 20px;
         height: 40px; }
         .Header-menu-user a:hover {
           background-color: #eee; }
+    .Header-menu-property {
+      margin-top: 20px;
+      justify-content: center; }
+      @media (min-width: 768px) {
+        .Header-menu-property {
+          margin-top: 0; } }
     .Header-menu-helper {
+      margin-top: 20px;
       display: flex;
-      margin-left: 20px; }
+      justify-content: center; }
+      @media (min-width: 768px) {
+        .Header-menu-helper {
+          margin-left: 20px;
+          margin-top: 0; } }
       .Header-menu-helper select {
         appearance: none;
         background-color: transparent;
@@ -434,3 +483,33 @@ body {
           border-top-right-radius: 3px; }
   .Header-logo img {
     width: 144px; }
+
+.Navigation {
+  height: 50px;
+  background-color: #f1f6ff; }
+  .Navigation .container {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    overflow-x: scroll; }
+  .Navigation-item {
+    margin-right: 10px;
+    font-size: 0.9em; }
+
+.Showcase {
+  text-align: center;
+  color: #fff;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  background-color: #083b87; }
+
+.Search {
+  background-color: #FBBE08;
+  padding: 40px;
+  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2); }
+  .Search-form {
+    position: relative;
+    display: flex; }
+  .Search .asd {
+    position: absolute;
+    right: 0; }
