--- a/scss/config/variable.scss
+++ b/scss/config/variable.scss
@@ -1,11 +1,13 @@
-$max-width: 1200px;
+$max-width: 1140px;
 $gutter: 20px;
 $border-radius: 3px;
 $finger-size: 40px; // kullanıcı 40-42px genişliğinde ve büyüklüğündeli kutuya rahat tıklayabiliyor. :))
+$font-size: 16px;
+$font-size-small: 0.9em;
 //////////////
 $color-navy: #083b87;
 $color-blue: #01acee;
 $color-soft-blue: #f1f6ff;
+$color-yellow:#FBBE08;
 //////////////
 $font-family: "Open Sans", Roboto, Arial, sans-serif;
-
