--- a/scss/global/header.scss
+++ b/scss/global/header.scss
@@ -1,40 +1,70 @@
 .Header {
+    height: 68px;
     border-bottom: 1px solid #ddd;
     .container {
+        height: 100%;
         position: relative;
         display: flex;
         align-items: center;
-        height: 64px;
     }
     &-switch {
+        position: relative;
+        left: 10px;
         margin-left: auto;
         @include mq() {
             display: none;
         }
     }
-
     &-menu {
-        //display: none;
+        pointer-events: none;
+        opacity: 0;
+        transform: translateX(100%);
+        transition: 0.2s;
+        display: flex;
         position: absolute;
         left: 0;
         right: 0;
         top: 100%;
-        background-color: #ccc;
-        display: flex;
+        padding-bottom: 20px;
+        padding-left: $gutter;
+        padding-right: $gutter;
         flex-direction: column;
-        align-items: center;
+        background-color: #fff;
+        box-shadow: 0 20px 30px rgba(black, 0.2);
+
+        .Header.menu-show & {
+            pointer-events: auto;
+            opacity: 1;
+            transform: translateY(0);
+        }
 
         @include mq() {
-            display: flex;
+            opacity: 1;
+            transform: translateY(0);
+            transition: 0s;
             margin-left: auto;
+            flex-direction: row;
+            position: static;
+            box-shadow: none;
+            background-color: transparent;
+            padding-left: 0;
+            padding-right: 0;
+            padding-bottom: 0;
         }
+
         &-user {
             margin-right: 10px;
             display: flex;
             flex-direction: column;
+            align-items: center;
+            @include mq() {
+                flex-direction: row;
+            }
             a {
+                width: 100%;
                 display: inline-flex; //içindeki yazıları ortalamak için
                 align-items: center;
+                justify-content: center;
                 padding-left: 20px; // tıklanacak alanı da böylece artırmış olduk :)))
                 padding-right: 20px;
                 height: $finger-size;
@@ -44,9 +74,22 @@
             }
         }
 
+        &-property {
+            margin-top: 20px;
+            justify-content: center;
+            @include mq(){ 
+                margin-top: 0;
+            }
+        }
+
         &-helper {
+            margin-top: 20px;
             display: flex;
-            margin-left: 20px;
+            justify-content: center;
+            @include mq() {
+                margin-left: 20px;
+                margin-top: 0;
+            }
             select {
                 appearance: none;
                 background-color: transparent;
